# bti

./: .gitignore  ChangeLog  HACKING  HOWTO  Makefile  Makefile.am  NOTES  README  RELEASE-NOTES  autogen.sh  bti-bashcompletion  bti-shrink-urls  bti-shrink-urls.1  bti-shrink-urls.xml  bti.1  bti.c  bti.example  bti.h  bti.xml  colors.c  colors.h  config.c  configure.ac  do_it  index.htm  index.html  oath.keys
